[gd_scene load_steps=33 format=3 uid="uid://50kom4qaawgj"]

[ext_resource type="Script" path="res://Scripts/clock.gd" id="1_2qt4j"]
[ext_resource type="Script" path="res://Scripts/PlayerVariables.gd" id="1_3mh27"]
[ext_resource type="Script" path="res://Scripts/CameraScript.gd" id="1_5f3g1"]
[ext_resource type="Script" path="res://Scripts/power_usage.gd" id="1_7etot"]
[ext_resource type="PackedScene" uid="uid://difus73thjkia" path="res://Scenes/door_objects/door.tscn" id="1_p4c8v"]
[ext_resource type="PackedScene" uid="uid://d277ithowb5ox" path="res://Scenes/door_objects/door_button.tscn" id="2_1usyn"]
[ext_resource type="Script" path="res://Scripts/Door_scripts/door_button.gd" id="4_1hc50"]
[ext_resource type="PackedScene" uid="uid://wl5lgdkwykf2" path="res://Scenes/door_objects/doorRight.tscn" id="6_8c2ka"]
[ext_resource type="Script" path="res://Scripts/Door_scripts/door_button_right.gd" id="8_lg67j"]
[ext_resource type="AudioStream" uid="uid://sbiqtf5sbmoo" path="res://Audio/Foley/cams/cam-switch.wav" id="9_7nu6f"]
[ext_resource type="Script" path="res://Scripts/SecurityDesk.gd" id="11_e841g"]
[ext_resource type="Script" path="res://Scenes/hintScript.gd" id="13_3x1cx"]
[ext_resource type="PackedScene" uid="uid://ke66pgu4a0c0" path="res://Scenes/Enemies/enemy_1.tscn" id="13_fs41x"]
[ext_resource type="PackedScene" uid="uid://chkipn1s5i87t" path="res://Scenes/lights/office_light.tscn" id="13_kiyjf"]
[ext_resource type="PackedScene" uid="uid://csa526h3h5uar" path="res://Scenes/Enemies/enemy_2.tscn" id="14_3fmj2"]
[ext_resource type="AudioStream" uid="uid://cglhk8623aryi" path="res://Audio/Music/Ambience/ES_Bed Ethereal Swell - SFX Producer.mp3" id="15_4bf4k"]

[sub_resource type="PlaneMesh" id="PlaneMesh_7un73"]
size = Vector2(4, 3)

[sub_resource type="Environment" id="Environment_np8ff"]

[sub_resource type="QuadMesh" id="QuadMesh_1yjkb"]
size = Vector2(3.6, 1)

[sub_resource type="QuadMesh" id="QuadMesh_o2gru"]
size = Vector2(3.6, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_071tq"]
size = Vector3(0.167931, 0.0958041, 0.0998699)

[sub_resource type="QuadMesh" id="QuadMesh_vo5rm"]

[sub_resource type="ViewportTexture" id="ViewportTexture_kitlk"]
viewport_path = NodePath("CameraViewports/Cam01")

[sub_resource type="ViewportTexture" id="ViewportTexture_ndo3t"]
viewport_path = NodePath("CameraViewports/Cam02")

[sub_resource type="ViewportTexture" id="ViewportTexture_ar2t2"]
viewport_path = NodePath("CameraViewports/Cam03")

[sub_resource type="ViewportTexture" id="ViewportTexture_x6s0a"]
viewport_path = NodePath("Office/infoViewport")

[sub_resource type="BoxMesh" id="BoxMesh_3q5bo"]

[sub_resource type="BoxMesh" id="BoxMesh_ntl3m"]

[sub_resource type="PlaneMesh" id="PlaneMesh_bxarc"]

[sub_resource type="Environment" id="Environment_30li3"]

[sub_resource type="Environment" id="Environment_2vpee"]

[sub_resource type="Environment" id="Environment_hkt8t"]

[node name="Main" type="Node3D" node_paths=PackedStringArray("countDownTimer")]
script = ExtResource("1_3mh27")
countDownTimer = NodePath("Office/infoViewport/clock/ClockTimer")

[node name="Office" type="Node3D" parent="."]

[node name="floor" type="MeshInstance3D" parent="Office"]
transform = Transform3D(0.898068, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.14152)
mesh = SubResource("PlaneMesh_7un73")
skeleton = NodePath("../..")

[node name="floor2" type="MeshInstance3D" parent="Office"]
transform = Transform3D(0.898068, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0.929469, 1.14152)
mesh = SubResource("PlaneMesh_7un73")
skeleton = NodePath("../..")

[node name="Camera3D" type="Camera3D" parent="Office"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000257373, 0.499416, 3.28737)
environment = SubResource("Environment_np8ff")
fov = 41.4
near = 0.017
far = 9.5
script = ExtResource("1_5f3g1")

[node name="walls" type="Node3D" parent="Office"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Office/walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.456899, -0.349618)
mesh = SubResource("QuadMesh_1yjkb")
skeleton = NodePath("../..")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Office/walls"]
transform = Transform3D(-1.32701e-08, 0, 1, 0, 1, 0, -0.303584, 0, -4.37114e-08, -1.80346, 0.456899, 2.08568)
mesh = SubResource("QuadMesh_o2gru")
skeleton = NodePath("../..")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Office/walls"]
transform = Transform3D(-1.32701e-08, 0, 1, 0, 1, 0, -0.303584, 0, -4.37114e-08, -1.80346, 0.456899, 0.198601)
mesh = SubResource("QuadMesh_o2gru")
skeleton = NodePath("../..")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Office/walls"]
transform = Transform3D(3.98102e-08, 0, -1, 0, 1, 0, 0.303584, 0, 1.31134e-07, 1.78578, 0.456899, 0.198601)
mesh = SubResource("QuadMesh_o2gru")
skeleton = NodePath("../..")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Office/walls"]
transform = Transform3D(3.98102e-08, 0, -1, 0, 1, 0, 0.303584, 0, 1.31134e-07, 1.78578, 0.456899, 2.08568)
mesh = SubResource("QuadMesh_o2gru")
skeleton = NodePath("../..")

[node name="DoorLeft" parent="Office" node_paths=PackedStringArray("doorCooldown") instance=ExtResource("1_p4c8v")]
doorCooldown = NodePath("Timer")

[node name="Timer" type="Timer" parent="Office/DoorLeft"]
wait_time = 0.299
one_shot = true

[node name="doorRight" parent="Office" node_paths=PackedStringArray("doorCooldown") instance=ExtResource("6_8c2ka")]
doorCooldown = NodePath("Timer")

[node name="Timer" type="Timer" parent="Office/doorRight"]
wait_time = 0.299
one_shot = true

[node name="DoorButtonLeft" parent="Office" node_paths=PackedStringArray("light") instance=ExtResource("2_1usyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.79992, 0.533764, 1.69205)
script = ExtResource("4_1hc50")
light = NodePath("OmniLight3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/DoorButtonLeft"]
shape = SubResource("BoxShape3D_071tq")

[node name="OmniLight3D" type="OmniLight3D" parent="Office/DoorButtonLeft"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0678686, 0, -0.01078)
light_color = Color(0.941176, 0.231373, 0.176471, 1)
light_energy = 0.062
light_indirect_energy = 6.951
light_volumetric_fog_energy = 2.653
light_size = 0.356
omni_range = 0.719808

[node name="DoorButtonright" parent="Office" node_paths=PackedStringArray("light") instance=ExtResource("2_1usyn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8102, 0.533764, 1.69918)
script = ExtResource("8_lg67j")
light = NodePath("OmniLight3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Office/DoorButtonright"]
shape = SubResource("BoxShape3D_071tq")

[node name="OmniLight3D" type="OmniLight3D" parent="Office/DoorButtonright"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0131565, 0, -0.01078)
light_color = Color(0.941176, 0.231373, 0.176471, 1)
light_energy = 0.062
light_indirect_energy = 6.951
light_volumetric_fog_energy = 2.653
light_size = 0.356
omni_range = 0.719808

[node name="SecurityDesk" type="Node3D" parent="Office" node_paths=PackedStringArray("cameras", "switchCooldown")]
script = ExtResource("11_e841g")
cameras = [NodePath("cam01"), NodePath("cam02"), NodePath("cam03")]
switchCooldown = NodePath("Cooldown")

[node name="screen" type="MeshInstance3D" parent="Office/SecurityDesk"]
transform = Transform3D(0.569003, 0, 0, 0, 0.569003, 0, 0, 0, 1, -0.0704824, 0.504819, 2.03947)
mesh = SubResource("QuadMesh_vo5rm")

[node name="cam01" type="Sprite3D" parent="Office/SecurityDesk"]
transform = Transform3D(0.087, 0, 0, 0, 0.132426, 0, 0, 0, 0.063, -0.0701576, 0.507906, 2.04031)
texture = SubResource("ViewportTexture_kitlk")

[node name="cam02" type="Sprite3D" parent="Office/SecurityDesk"]
transform = Transform3D(0.087, 0, 0, 0, 0.132426, 0, 0, 0, 0.063, -0.0701576, 0.507906, 2.04031)
texture = SubResource("ViewportTexture_ndo3t")

[node name="cam03" type="Sprite3D" parent="Office/SecurityDesk"]
transform = Transform3D(0.087, 0, 0, 0, 0.132426, 0, 0, 0, 0.063, -0.0701576, 0.507906, 2.04031)
texture = SubResource("ViewportTexture_ar2t2")

[node name="info" type="Sprite3D" parent="Office/SecurityDesk"]
transform = Transform3D(0.0547912, 0, 0, 0, 0.0833997, 0, 0, 0, 0.063, -0.079838, 0.488529, 2.05575)
texture = SubResource("ViewportTexture_x6s0a")

[node name="Cooldown" type="Timer" parent="Office/SecurityDesk"]
wait_time = 0.2
one_shot = true

[node name="camSwitchSFX" type="AudioStreamPlayer3D" parent="Office/SecurityDesk"]
stream = ExtResource("9_7nu6f")
volume_db = -12.0

[node name="infoViewport" type="SubViewport" parent="Office"]
transparent_bg = true
size = Vector2i(1037, 727)
render_target_update_mode = 3

[node name="Usage" type="Node2D" parent="Office/infoViewport"]
script = ExtResource("1_7etot")

[node name="Usage1" type="MeshInstance2D" parent="Office/infoViewport/Usage"]
position = Vector2(960, 170)
scale = Vector2(84.25, 84.25)
mesh = SubResource("BoxMesh_3q5bo")

[node name="Usage2" type="MeshInstance2D" parent="Office/infoViewport/Usage"]
modulate = Color(1, 0.784314, 0.74902, 1)
position = Vector2(960, 270)
scale = Vector2(84.25, 84.25)
mesh = SubResource("BoxMesh_ntl3m")

[node name="Usage3" type="MeshInstance2D" parent="Office/infoViewport/Usage"]
modulate = Color(1, 0.427451, 0.356863, 1)
position = Vector2(960, 370)
scale = Vector2(84.25, 84.25)
mesh = SubResource("BoxMesh_ntl3m")

[node name="RichTextLabel" type="RichTextLabel" parent="Office/infoViewport/Usage"]
offset_left = 150.0
offset_top = 520.0
offset_right = 530.0
offset_bottom = 632.0
theme_override_font_sizes/normal_font_size = 51
text = "ffffff"

[node name="Camera2D" type="Camera2D" parent="Office/infoViewport/Usage"]
position = Vector2(580, 326)

[node name="clock" type="Node2D" parent="Office/infoViewport" node_paths=PackedStringArray("countDownTimer")]
script = ExtResource("1_2qt4j")
countDownTimer = NodePath("ClockTimer")

[node name="RichTextLabel" type="RichTextLabel" parent="Office/infoViewport/clock"]
offset_left = 720.69
offset_top = -26.965
offset_right = 1154.69
offset_bottom = 167.035
theme_override_font_sizes/normal_font_size = 101
text = "12am"

[node name="ClockTimer" type="Timer" parent="Office/infoViewport/clock"]
wait_time = 45.0
one_shot = true

[node name="EnviroLights" type="Node3D" parent="Office"]

[node name="OmniLight3D" parent="Office/EnviroLights" instance=ExtResource("13_kiyjf")]

[node name="UI" type="Control" parent="Office" node_paths=PackedStringArray("hint", "timer")]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("13_3x1cx")
hint = [NodePath("hint#1"), NodePath("hint#2"), NodePath("hint#3")]
timer = NodePath("Timer")

[node name="hint#1" type="RichTextLabel" parent="Office/UI"]
layout_mode = 0
offset_right = 730.0
offset_bottom = 63.0
theme_override_font_sizes/normal_font_size = 41
text = "Press 'A' and 'D' to switch cameras"

[node name="hint#2" type="RichTextLabel" parent="Office/UI"]
layout_mode = 0
offset_right = 1089.0
offset_bottom = 63.0
theme_override_font_sizes/normal_font_size = 41
text = "Click the red buttons to close the doors."

[node name="hint#3" type="RichTextLabel" parent="Office/UI"]
layout_mode = 0
offset_right = 1089.0
offset_bottom = 114.0
theme_override_font_sizes/normal_font_size = 41
text = "Closing doors drains power. If you run out of power
you can't use the doors anymore."

[node name="Timer" type="Timer" parent="Office/UI"]
wait_time = 5.0
one_shot = true

[node name="Hallway" type="Node3D" parent="."]

[node name="CorridorLeft" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(-7.69321e-07, 0, 0.4, 0, 1, 0, -3.52, 0, -8.74228e-08, -2.18723, 0.00922394, -0.908891)
mesh = SubResource("PlaneMesh_bxarc")

[node name="CorridorLeft2" type="MeshInstance3D" parent="Hallway/CorridorLeft"]
transform = Transform3D(-1, 6.25868e-08, -2.81714e-08, -2.4836e-08, -4.37113e-08, 1.13429, 6.25867e-08, 1, 4.95816e-08, -1.19209e-07, 0, -0.97202)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CorridorLeft3" type="MeshInstance3D" parent="Hallway/CorridorLeft"]
transform = Transform3D(0.593346, -1.50009e-07, 2.81714e-08, -1.47363e-08, -4.37113e-08, 1.13429, -8.90078e-08, -1, -4.95816e-08, 0.43909, 0, 1.10164)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CorridorLeft4" type="MeshInstance3D" parent="Hallway/CorridorLeft"]
transform = Transform3D(-1, 6.77318e-08, -3.8466e-06, 5.9609e-08, -0.999999, -3.4106e-13, -3.8466e-06, -4.38165e-13, 1, 0, 0.930142, 0)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CorridorLeft2" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(-7.69321e-07, 0, 0.4, 0, 1, 0, -3.52, 0, -8.74228e-08, 2.18345, 0.00922394, -0.908891)
mesh = SubResource("PlaneMesh_bxarc")

[node name="CorridorLeft2" type="MeshInstance3D" parent="Hallway/CorridorLeft2"]
transform = Transform3D(1, -1.50009e-07, 2.81714e-08, -2.4836e-08, -4.37113e-08, 1.13429, -1.5001e-07, -1, -4.95816e-08, 2.98023e-08, 0, 0.99188)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CorridorLeft3" type="MeshInstance3D" parent="Hallway/CorridorLeft2"]
transform = Transform3D(-0.593346, 2.37432e-07, -2.81714e-08, -1.47363e-08, -4.37112e-08, 1.13429, 1.4088e-07, 1, 4.95816e-08, 0.442855, 0, -1.10369)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CorridorLeft4" type="MeshInstance3D" parent="Hallway/CorridorLeft2"]
transform = Transform3D(-1, 6.77318e-08, -3.8466e-06, 5.9609e-08, -0.999999, -3.4106e-13, -3.8466e-06, -4.38165e-13, 1, 0, 0.930142, 0)
mesh = SubResource("PlaneMesh_bxarc")
skeleton = NodePath("../..")

[node name="CameraViewports" type="Node3D" parent="."]

[node name="Cam01" type="SubViewport" parent="CameraViewports"]
size = Vector2i(600, 400)
render_target_update_mode = 3

[node name="cam01" type="Camera3D" parent="CameraViewports/Cam01"]
transform = Transform3D(-0.99164, 0, -0.129035, 0, 1, 0, 0.129035, 0, -0.99164, -2.50832, 0.820703, -3.96371)
environment = SubResource("Environment_30li3")

[node name="CamText01" type="Label" parent="CameraViewports/Cam01"]
custom_minimum_size = Vector2(6.095, 12.28)
offset_left = 20.0
offset_right = 202.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "CAM 01"

[node name="Cam02" type="SubViewport" parent="CameraViewports"]
size = Vector2i(600, 400)
render_target_update_mode = 3

[node name="cam02" type="Camera3D" parent="CameraViewports/Cam02"]
transform = Transform3D(0.790499, 0, 0.612464, 0, 1, 0, -0.612464, 0, 0.790499, 2.55549, 0.338335, -0.471992)
environment = SubResource("Environment_2vpee")

[node name="CamText02" type="Label" parent="CameraViewports/Cam02"]
custom_minimum_size = Vector2(6.095, 12.28)
offset_left = 20.0
offset_right = 202.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "CAM 02"

[node name="Cam03" type="SubViewport" parent="CameraViewports"]
size = Vector2i(600, 400)
render_target_update_mode = 3

[node name="cam03" type="Camera3D" parent="CameraViewports/Cam03"]
transform = Transform3D(-0.967862, 0, 0.25148, 0, 1, 0, -0.25148, 0, -0.967862, 2.19407, 0.338335, -2.47709)
environment = SubResource("Environment_hkt8t")

[node name="CamText03" type="Label" parent="CameraViewports/Cam03"]
custom_minimum_size = Vector2(6.095, 12.28)
offset_left = 20.0
offset_right = 202.0
offset_bottom = 72.0
theme_override_font_sizes/font_size = 50
text = "CAM 03"

[node name="Enemies" type="Node3D" parent="."]

[node name="enemy1" parent="Enemies" instance=ExtResource("13_fs41x")]

[node name="enemy2" parent="Enemies" instance=ExtResource("14_3fmj2")]
moveLocations = Array[Transform3D]([Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0), Transform3D(1, 0, 0, 0, 1, 0, 0.3, 0, 1, 0, 0, 0), Transform3D(1, 0, 0, 0, 1, 0, 1.6, 0, 1, 0, 0, 0), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0)])

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_4bf4k")
volume_db = -5.0
autoplay = true

[connection signal="input_event" from="Office/DoorButtonLeft" to="Office/DoorLeft" method="_on_door_button_left_input_event"]
[connection signal="input_event" from="Office/DoorButtonLeft" to="Office/DoorButtonLeft" method="_on_input_event"]
[connection signal="input_event" from="Office/DoorButtonright" to="Office/doorRight" method="_on_door_buttonright_input_event"]
[connection signal="input_event" from="Office/DoorButtonright" to="Office/DoorButtonright" method="_on_input_event"]
